<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_top"
        android:textSize="@dimen/dimen_tv_top"
        android:background="@color/coral"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_temp_settings"
        app:layout_constraintTop_toBottomOf="@id/settings"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@color/coral"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/coral"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_notifications"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        android:textSize="20sp"
        android:textColor="@color/white"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_about"
        app:layout_constraintTop_toBottomOf="@id/notification"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@color/coral"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>